--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -57,11 +57,10 @@
   margin-bottom: 15px;
   border-radius: 8px;
   padding: 20px 0;
-  max-width: 1080px;
   padding-bottom: 0;
   box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
     0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
-  background-color: #673ab7;
+  background-color: #f2f2f2;
 }
 
 .mt-10 {
@@ -108,4 +107,8 @@
   max-height: 300px;
   opacity: 1;
   padding: 10px 0;
+}
+
+::ng-deep mat-form-field {
+  margin-right: 10px;
 }
